Dark mode modals, padding modal fix

--- a/belong-to-you/src/css.scss
+++ b/belong-to-you/src/css.scss
@@ -33,17 +33,17 @@ $sm-break: "screen and (min-width:576px)";
 $xs-break: "screen and (max-width:576px)";
 
 
-html, body {
-  width: 100%;
-  // height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden; 
-}
-
 body {
   background-color: $gray-100;
   font-family: Arial, Helvetica, sans-serif;
+
+  transition: background-color .3s ease-in-out;
+
+}
+
+.wrap {
+  position: relative;
+  overflow: hidden;
 }
 
 header {
@@ -309,13 +309,21 @@ header {
   padding: 0 3.5rem;
   font-size: 1.25rem;
   font-family: $font-text;
+
+  transition: color .3s ease-in-out;
 }
 
+// Fade IN
+
+@keyframes fadeIn {
+  0%   {opacity: 0;}
+  100% {opacity: 100%;}
+}
 
 .scene {
   background-color: $dark;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 50% 50%;
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
@@ -325,6 +333,12 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+
+  animation-name: fadeIn;
+  animation-duration: 2s;
+
+
+  transition: opacity .3s ease-in-out;
 
   &-a {
     background-image: url(https://images.unsplash.com/photo-1587997573803-5df279e30716?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1463&q=80);
@@ -412,6 +426,11 @@ header {
   hr {
     border-top-color: rgba($light, .5);
   }
+
+  .modal-body {
+    background-color: $primary;
+    color: $light;
+  }
 }
 
 // Formatting
@@ -419,4 +438,5 @@ header {
 hr {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+  transition: border-top-color .3s ease-in-out;
 }
